# Shirag

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Guidelines.md  README.md
.github/workflows/: github-pages.yml
include/: Shirag.hpp
src/discord/: discord.cpp  discord.hpp
src/drawing/circle/: circle.cpp  circle.hpp
src/drawing/line/: line.cpp  line.hpp
src/drawing/rectangle/: rectangle.cpp  rectangle.hpp
src/drawing/text/: text.cpp  text.hpp
src/gui/windowSystem/: windowSystem.cpp  windowSystem.hpp
src/raytrace/: raytrace.cpp  raytrace.hpp
src/text/fonts/: fonts.cpp  fonts.hpp
src/version/: version.cpp  version.hpp
src/window/: window.cpp  window.hpp
